helmcharts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "web-console-ingress"
  namespace: "web-console"
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - "4.224.72.210.sslip.io"
    secretName: "sandbox-kong-ssl-cert"
  rules:
  - host: "4.224.72.210.sslip.io"
    http:
      paths:
      - path: "/console"
        pathType: Prefix
        backend:
          service:
            name: web-console
            port:
              number: 3000
